# policy-simulation-supply-chain-rl

picard-mujoco/: README.md  pyproject.toml
picard-mujoco/picard/: __init__.py  nn.py  picard.py  sequential.py  utils.py
picard-mujoco/picard/purejaxrl/: policies.py  wrappers.py
picard-mujoco/scripts/: Snakefile  mses.csv  ppo.py  results.R  rollout_times.csv  rollout_times.py  rollout_times_all_iterates.py  rollout_times_checkpoint.py  run.py
picard-mujoco/scripts/config/: cartpole.yaml  cleanrl_default.yaml  hopper.yaml  mujoco_sys.yaml  pendulum.yaml  swimmer.yaml
picard-mujoco/scripts/config/envs/: cartpole.yaml  half_cheetah.yaml  hopper.yaml  inverted_pendulum.yaml  pendulum.yaml  walker2d.yaml
picard-mujoco/scripts/config/policies/: continuous_large.yaml  continuous_small.yaml  discrete_large.yaml  discrete_small.yaml
picard-mujoco/test/: test.py
supply-chain-simulation/: .gitignore  README.md  datamodel.py  fulfillment_optimization.py  jax_E2E_RL.py  jax_dataclass.py  jax_sim.py  primal_dual_fulfillment.py  synthetic_data.py
