[tool.poetry]
name = "picard"
version = "0.1.0"
description = ""
authors = ["Andrew Zheng <azheng92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mujoco-mjx = "^3.1.5"
pandas = "^2.2.2"
jaxlib = "^0.4.28"
jax = "^0.4.28"
jaxtyping = "^0.2.28"
funcy = "^2.0"
gymnax = "^0.0.8"
flax = "^0.8.3"
tqdm = "^4.66.4"
brax = {git = "https://github.com/atzheng/brax.git"}
pytest = "^8.2.0"
chex = "^0.1.86"
distrax = "^0.1.5"
sacred = "^0.8.5"
wandb = "^0.17.0"
snakemake = "^7.8.0"
pulp = "<2.8.0"
tabulate = "0.8.10"
orbax = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
